# rust-trade

./: Cargo.toml  LICENSE  README.md  rustc-ice-2025-02-15T09_54_56-13388.txt
config/: default.toml  init.sql  tick_data.sql
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.jsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/Backtest/: page.tsx
frontend/src/app/Settings/: page.tsx
frontend/src/app/trading/: page.tsx
frontend/src/components/: KlineChart.jsx  OrderBook.jsx  TickerCard.jsx  TradesTable.jsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: datetime-picker.tsx
src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/commands/: market.rs
src/ai/llm/: analyzer.rs  mod.rs  risk.rs  strategy_generator.rs  types.rs
src/api/: README.md  api_curl_example.md  rest.rs  types.rs
src/backtest/: README.md  mod.rs  types.rs
src/backtest/engine/: engine.rs  executor.rs  mod.rs
src/backtest/strategy/: mod.rs  sma_cross.rs
src/data/: market_data.rs
src/services/: market_data_collector.rs
src/services/exchange/: binance.rs  market_data_collector.rs  mod.rs  types.rs
substrate-test-node/: Dockerfile  README.md  docker-compose.yml
trading-api/: Cargo.toml
trading-core/: .gitignore  Cargo.toml  README.md
trading-core/benches/: README.md  market_data_cache.rs
trading-core/examples/: balance_check.rs  example_check.rs  transfer_check.rs
trading-core/src/: commands.rs  config.rs  lib.rs  main.rs  market_data_collector.rs  state.rs
trading-core/src/ai/llm/: analyzer.rs  types.rs
trading-core/src/api/: README.md  mod.rs  rest.rs
trading-core/src/backtest/: engine.rs  metrics.rs  mod.rs  sma.rs  types.rs
trading-core/src/backtest/engine/: engine.rs
trading-core/src/backtest/strategy/: base.rs  sma_cross.rs
trading-core/src/blockchain/: error.rs  mod.rs  types.rs
trading-core/src/commands/: market.rs
trading-core/src/data/: cache.rs  database.rs  market_data.rs  mod.rs  types.rs
trading-core/src/examples/: backtest_example.rs
trading-core/src/exchange/: binance.rs  types.rs
trading-core/src/services/: market_data_collector.rs  mod.rs
trading-core/src/services/exchange/: types.rs
