[workspace]
members = [
    "trading-core",
    "trading-api",
    "src-tauri"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"