[package]
name = "trading-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "api-all"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
trading-core = { path = "../trading-core" }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]