[package]
name = "trading-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.32", features = ["serde"] }
async-trait = "0.1"
axum = "0.7"
tower = "0.4"
ta = "0.5" 
async-openai = "0.13"
clap = { version = "4.4", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace"] }
tauri = { version = "1.5", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]